; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_ignore.c_git_ignore_clear_internal_rules.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_ignore.c_git_ignore_clear_internal_rules.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_IGNORE_DEFAULT_RULES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_ignore_clear_internal_rules(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @get_internal_ignores(i32** %5, i32* %6)
  store i32 %7, i32* %4, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %2, align 4
  br label %24

11:                                               ; preds = %1
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @git_attr_file__clear_rules(i32* %12, i32 1)
  store i32 %13, i32* %4, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %20, label %15

15:                                               ; preds = %11
  %16 = load i32*, i32** %3, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* @GIT_IGNORE_DEFAULT_RULES, align 4
  %19 = call i32 @parse_ignore_file(i32* %16, i32* %17, i32 %18, i32 0)
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %15, %11
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @git_attr_file__free(i32* %21)
  %23 = load i32, i32* %4, align 4
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %20, %9
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @get_internal_ignores(i32**, i32*) #1

declare dso_local i32 @git_attr_file__clear_rules(i32*, i32) #1

declare dso_local i32 @parse_ignore_file(i32*, i32*, i32, i32) #1

declare dso_local i32 @git_attr_file__free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
